fixed horizontal scrolling on all resolutions added link to github pages in README.md

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -8,7 +8,7 @@
   font-weight: 900;
   line-height: normal;
   max-width: 282px;
-  /* max-height: 100%; */
+  width: 90vw;
   justify-self: center;
 }
 
