--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  border-bottom: 1px solid rgba(84, 84, 84, 1);
+  border-bottom: 1px solid rgba(84, 84, 84);
   margin: 45px auto 0px;
   max-width: 880px;
   padding: 0 19px 0;
@@ -13,7 +13,7 @@
   .header {
     padding: 0 0 0 27px;
     margin: 28px auto 42px;
-    width: 320px;
+    max-width: 320px;
     height: 56px;
   }
 
